<resources>
    <string name="app_name">Pop Movies</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="no_movie_data_found">No movie data found</string>
    <string name="enable_internet">Please enable internet connection on your device</string>
    <string name="server_error">There seems to some error at the server</string>

    <string name="menu_item_settings">Settings</string>

    <string name="favorite">Mark as favorite</string>

    <string name="unfavorite">Remove as favorite</string>

    <string name="pref_sort_by_title">Sort By</string>
    <string name="pref_sort_by_key" translatable="false">sort_by</string>
    <string name="pref_sort_by_default" translatable="false">popularity</string>

    <string name="pref_sort_by_popularity" translatable="false">popularity</string>
    <string name="pref_sort_by_rating" translatable="false">rating</string>
    <string name="pref_sort_by_favorite" translatable="false">favorite</string>

    <string name="storage_permission" translatable="true">The App requires the storage permission to work</string>

    <string-array name="pref_sort_by_labels">
        <item>Popularity</item>
        <item>Rating</item>
        <item>Favorite</item>
    </string-array>

    <string-array name="pref_sort_by_values" translatable="false">
        <item>popularity</item>
        <item>rating</item>
        <item>favorite</item>
    </string-array>

    <string name="pref_nsfw_title">Enable NSFW</string>
    <string name="pref_nsfw_key" translatable="false">nsfw</string>
    <string name="pref_nsfw_default" translatable="false">no</string>

    <string-array name="pref_nsfw_labels">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="pref_nsfw_values" translatable="false">
        <item>yes</item>
        <item>no</item>
    </string-array>

    <string name="reviews">Reviews</string>
    <string name="no_reviews">No Reviews Found</string>

    <string name="trailers">Trailers</string>
    <string name="no_trailers">No Trailers Found</string>

    <string name="no_internet_connection">No Internet connection</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
