<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ListPreference
        android:title="@string/pref_sort_by_title"
        android:key="@string/pref_sort_by_key"
        android:entryValues="@array/pref_sort_by_values"
        android:entries="@array/pref_sort_by_labels"
        android:defaultValue="@string/pref_sort_by_default"
        />

    <ListPreference
        android:title="@string/pref_nsfw_title"
        android:key="@string/pref_nsfw_key"
        android:entryValues="@array/pref_nsfw_values"
        android:entries="@array/pref_nsfw_labels"
        android:defaultValue="@string/pref_nsfw_default"
        />

</PreferenceScreen>